tests/ui/normalize_and_x_others.rs
fn main() {
    let _x = 42_u8 >> "bar";
}
